// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Grid > GridCell align 1`] = `
<DocumentFragment>
  <div
    class="mdc-layout-grid__cell mdc-layout-grid__cell--align-top"
  />
</DocumentFragment>
`;

exports[`Grid > GridCell desktop 1`] = `
<DocumentFragment>
  <div
    class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop"
  />
</DocumentFragment>
`;

exports[`Grid > GridCell order 1`] = `
<DocumentFragment>
  <div
    class="mdc-layout-grid__cell mdc-layout-grid__cell--order-4"
  />
</DocumentFragment>
`;

exports[`Grid > GridCell phone 1`] = `
<DocumentFragment>
  <div
    class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone"
  />
</DocumentFragment>
`;

exports[`Grid > GridCell span 1`] = `
<DocumentFragment>
  <div
    class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4"
  />
</DocumentFragment>
`;

exports[`Grid > GridCell tablet 1`] = `
<DocumentFragment>
  <div
    class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet"
  />
</DocumentFragment>
`;

exports[`Grid > can be align 1`] = `
<DocumentFragment>
  <div
    class="mdc-layout-grid mdc-layout-grid--align-left"
  >
    <div
      class="mdc-layout-grid__inner"
    />
  </div>
  <div
    class="mdc-layout-grid mdc-layout-grid--align-right"
  >
    <div
      class="mdc-layout-grid__inner"
    />
  </div>
</DocumentFragment>
`;

exports[`Grid > can be fixedColumnWidth 1`] = `
<DocumentFragment>
  <div
    class="mdc-layout-grid mdc-layout-grid--fixed-column-width"
  >
    <div
      class="mdc-layout-grid__inner"
    />
  </div>
</DocumentFragment>
`;

exports[`Grid > can have a custom GridRow component 1`] = `
<DocumentFragment>
  <div
    class="mdc-layout-grid"
  >
    <div
      class="mdc-layout-grid__inner"
    />
  </div>
</DocumentFragment>
`;

exports[`Grid > renders grid 1`] = `
<DocumentFragment>
  <div
    class="mdc-layout-grid"
  >
    <div
      class="mdc-layout-grid__inner"
    />
  </div>
</DocumentFragment>
`;

exports[`Grid > renders gridCell 1`] = `
<DocumentFragment>
  <div
    class="mdc-layout-grid__cell"
  />
</DocumentFragment>
`;
